--- a/MultiMarkdown QuickLook/MultiMarkdown QuickLook-Info.plist
+++ b/MultiMarkdown QuickLook/MultiMarkdown QuickLook-Info.plist
@@ -31,15 +31,15 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>net.fletcherpenney.quicklook</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1</string>
+	<string>5.0.1</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>5.0.1</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
@@ -59,7 +59,7 @@
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2011 Fletcher T. Penney. All rights reserved.</string>
+	<string>Copyright © 2011-2105 Fletcher T. Penney. All rights reserved.</string>
 	<key>QLNeedsToBeRunInMainThread</key>
 	<false/>
 	<key>QLPreviewHeight</key>
@@ -67,7 +67,7 @@
 	<key>QLPreviewWidth</key>
 	<real>800</real>
 	<key>QLSupportsConcurrentRequests</key>
-	<false/>
+	<true/>
 	<key>QLThumbnailMinimumSize</key>
 	<real>17</real>
 	<key>UTImportedTypeDeclarations</key>
